[package]
name = "phil"
version = "0.1.0"
authors = ["Sam Kirby <sam.kirby94@hotmail.co.uk>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1"
rand = "0.8"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.songbird]
features = ["builtin-queue", "yt-dlp"]
# git = "https://github.com/serenity-rs/songbird.git"
git = "https://github.com/sam-kirby/songbird.git"
branch = "next"

[dependencies.serenity]
features = ["cache", "standard_framework", "voice", "rustls_backend", "unstable_discord_api"]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"

[dependencies.time]
version = "0.3"
features = ["serde"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "sync"]
