[package]
name = "phil"
version = "0.1.0"
authors = ["Sam Kirby <sam.kirby94@hotmail.co.uk>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1"
futures = "0.3"
once_cell = "1.17"
rand = "0.8"
regex = "1.7"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.songbird]
features = ["builtin-queue"]
version = "0.4"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serenity]
features = ["cache", "standard_framework", "voice", "rustls_backend"]
version = "0.12"

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.time]
version = "0.3"
features = ["serde"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "sync"]
